# mr-spark-migration

./: .gitignore  README.md  pyproject.toml
resources/: java-analyser-output.json  mr_spark_config1.html  mr_to_spark_architecture_v1.html
scripts/: demo_analyzer.py  run_with_tracing.sh  setup.sh
src/agents/: __init__.py  graph.py  nodes.py
src/models/: __init__.py  state.py
src/tools/: __init__.py  base_tools.py  build_runner.py  git_resolver.py  java_analyzer.py  llm_codegen.py  project_scaffold.py  report_generator.py  risk_scanner.py  schema_extractor.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
tests/fixtures/wordcount/: pom.xml
tests/fixtures/wordcount/src/main/java/com/example/mr/: CompositeKey.java  WordCountCombiner.java  WordCountDriver.java  WordCountMapper.java  WordCountReducer.java
tests/fixtures/wordcount/src/main/resources/: word_count.avsc
ui/: app.py
